--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -468,3 +468,61 @@ main.container {
   margin-top: 30px;       /* Separación adicional debajo del título */
   font-size: 1.1rem;
 }
+
+
+/* Nosotros */
+
+/* Ajustar tamaño de imágenes del equipo */
+.team-member img {
+  width: 150px;       /* ancho deseado */
+  height: 150px;      /* alto deseado */
+  object-fit: cover;  /* recorta o ajusta la imagen para que quede bien */
+  border-radius: 50%; /* opcional: para que sea circular */
+}
+
+
+/* ================== NOSOTROS ================== */
+
+.team-grid {
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  margin: 2rem 0;
+  padding: 0 1rem;
+}
+
+.team-member {
+  background: #0e1c29;
+  border-radius: 15px;
+  padding: 1rem;
+  text-align: center;
+  box-shadow: 0 0 15px rgba(77,166,255,0.1);
+  transition: transform 0.2s, box-shadow 0.2s;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.team-member:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 10px 20px rgba(14, 50, 85, 0.3);
+}
+
+.team-member img {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 7px;
+  margin-bottom: 1rem;
+  display: block;
+}
+.team-member h3 {
+  margin-bottom: 0.5rem;
+  color: #fff;
+}
+.team-member p {
+  font-size: 1.2rem;
+  color: #f1f1f1;
+}
+/* ======= INICIAR SESIÓN ======= */
+
+
